# okama-macro

./: .gitignore  README.md  __init__.py  auto_retail.py  codes.json  gdp.py  hicp.py  household.py  infl.py  inflation.py  investment.py  kr.py  land.py  money_supply.py  pmi.py  pyproject.toml  request_data.py  unemployment.py
.github/workflows/: ci.yml
docs/audits/: boe-uk-br.md  boi-ils-isr.md  cfets-chn-lpr.md  ecb-eu-rates.md  nbsc-cny-infl.md  ons-gbp-infl.md
okama_macro/: __init__.py  _frame.py  _http.py  registry.py
okama_macro/sources/: bis.py  censtatd.py  fred.py  hkma.py  mospi.py  rbi.py
okama_macro/sources/boe/: __init__.py  kr.py  request_data.py
okama_macro/sources/boi/: __init__.py  gdp.py  infl.py  kr.py  request_data.py  settings.py
okama_macro/sources/cfets/: __init__.py  lpr.py  request_data.py
okama_macro/sources/ecb/: __init__.py  gdp.py  hicp.py  kr.py  request_data.py
okama_macro/sources/nbsc/: __init__.py  codes.json  gdp.py  household.py  inflation.py  money_supply.py  pmi.py  ppi.py  request_data.py  unemployment.py
okama_macro/sources/ons/: __init__.py  gdp.py  infl.py  request_data.py
tests/: test_bis.py  test_boe_contract.py  test_boi_contract.py  test_censtatd.py  test_cfets_contract.py  test_ecb_contract.py  test_frame.py  test_fred.py  test_fred_retry.py  test_hkma.py  test_http.py  test_mospi.py  test_nbsc_contract.py  test_ons_contract.py  test_rbi.py  test_registry.py
